--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
         alt="plate icon"
       />
       <h1>Cookbook de Bel-Ami</h1>
+      <a id="h1-home" href="./index.html">Cookbook de Bel-Ami</a>
+      <div class="hamburger-icon-container">
+        <img class="hamburger-icon" src="./assets/icons/wooden-spoons-icon.png" alt="hamburger-icon that looks like wooden spoons">
+      </div>
+  
       <a href="./index.html" id="home-button" class="header-buttons">HOME</a>
-      <a href=".." class="header-buttons">PŘEDKRMY</a>
-      <a href=".." class="header-buttons">HLAVNÍ CHODY</a>
-      <a href=".." class="header-buttons">DEZERTY</a>
-      <a href=".." class="header-buttons">VZOROVÉ MENU</a>
+      <a href="./html/appetizers.html" class="header-buttons">PŘEDKRMY</a>
+      <a href="./html/main dish.html" class="header-buttons">HLAVNÍ CHODY</a>
+      <a href="./html/desserts.html" class="header-buttons">DEZERTY</a>
+      <a href="#" class="header-buttons">VZOROVÉ MENU</a>
     </div>
 
     <!--MAIN Container-->
     <div class="main-grid-container">
 
-      <div class="grid-flex-container">
-        <div class="img-container">
+        <div class="image-cell">
           <img
             class="main-page-img left-image"
             src="./assets/images/harisson dort.jpg"
@@ -45,37 +49,32 @@
           />
         </div>
   
-        <div class="text-container">
-          <h2>Kdo jsme?</h2>
-          <p>Jsme pár milující dobré jídlo a sebe navzájem. 
-            V kuchyni rádi experimentujeme a zkoušíme nové kombinace chutí i
-            poloh na sporáku. Kuchařku jsme založili, protože rádi tvoříme, a
-            chceme zaznamenat naše pokroky v oblasti gastronomie.
+        <div class="text-cell">
+          <h2 class="container-content">Kdo jsme?</h2>
+          <p class="container-content">Jsme pár milující dobré jídlo a sebe navzájem. 
+            Kuchařku jsme založili, protože rádi vytváříme nové recepty, 
+            které chceme mít zaznamenány, abychom se k nim mohli 
+            vracet či ohodnotit naše pokroky v oblasti gastronomie.
           </p>
         </div>
-      </div>
-
-      <div class="grid-flex-container border-line">
-        <div class="text-container">
-          <h2>Co tu najdete?</h2>
-          <p>Jsme pár milující dobré jídlo a sebe navzájem. 
-            V kuchyni rádi experimentujeme a zkoušíme nové kombinace chutí i
-            poloh na sporáku. Kuchařku jsme založili, protože rádi tvoříme, a
-            chceme zaznamenat naše pokroky v oblasti gastronomie.
+        <div class="text-cell">
+          <h2 class="container-content">Co tu najdete?</h2>
+          <p class="container-content">Na naší stránce naleznete řadu receptů všech možných druhů a kombinací, 
+            od předkrmů, přes hlavní jídla až k dezertům. 
+            Pokud tedy chcete na někoho zapůsobit, nebo jen někomu udělat radost, jistě si 
+            vyberete z naší pestré nabídky výborných předkrmů, hlavních chodů a dezertů.
           </p>
         </div>
   
-        <div class="img-container"id="second-image">
+        <div class="image-cell" id="second-image">
           <img
             class="main-page-img right-image"
             src="./assets/images/knedlíčky.png"
             alt="domácí kynuté knedlíčky s borůvkami"
           />
         </div>
-      </div>
 
-      <div class="grid-flex-container border-line">
-        <div class="img-container">
+        <div class="image-cell">
           <img
             class="main-page-img left-image"
             src="./assets/images/mrkvova pomazanka uvodni.jpg"
@@ -83,15 +82,14 @@
           />
         </div>
   
-        <div class="text-container">
-          <h2>Vzorové menu</h2>
-          <p>Jsme pár milující dobré jídlo a sebe navzájem. 
-            V kuchyni rádi experimentujeme a zkoušíme nové kombinace chutí i
-            poloh na sporáku. Kuchařku jsme založili, protože rádi tvoříme, a
-            chceme zaznamenat naše pokroky v oblasti gastronomie.
+        <div class="text-cell">
+          <h2 class="container-content">Vzorové menu</h2>
+          <p class="container-content">Chcete udělat radost milované osobě či vám přijdou na návštěvu přátele, 
+            a vy nevíte, co jim nabídnout? Žádný strach! U nás najdete několik vzorových menu ke každé příležitosti. 
+            S našimi menu udělají pánové dojem na tatínka své nevěsty a dámy třeba na tchýni svého milovaného. 
+            Výběr je pouze na vás, ale jedno je jisté, u nás si vybere každý.
           </p>
         </div>
-      </div>
 
     </div>
 
