--- a/html/recipes/appetizers/mrkvova_pomazanka.html
+++ b/html/recipes/appetizers/mrkvova_pomazanka.html
@@ -15,31 +15,49 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <script src="../../../script.js" defer></script>
   </head>
 
   <body>
-    <!--FIXED HEADER-->
-    <div class="header">
-      <img
-        class="main-icon"
-        src="../../../assets/icons/main_icon.png"
-        alt="plate icon"
-      />
-      <h1>Cookbook de Bel-Ami</h1>
-      <a id="h1-home" href="../index.html">Cookbook de Bel-Ami</a>
-      <div class="hamburger-icon-container">
-        <img
-          class="hamburger-icon"
-          src="../../../assets/icons/wooden-spoons-icon.png"
-          alt="hamburger-icon that looks like wooden spoons"
-        />
+    <nav class="navbar">
+
+      <div class="brand-icon">
+        <img class="brand-icon" src="../../../assets/icons/main_icon.png" alt="cook icon">
       </div>
 
-      <a href="../../../index.html" id="home-button" class="header-buttons">HOME</a>
-      <a href="../../../html/appetizers.html" class="header-buttons">PŘEDKRMY</a>
-      <a href="../../../html/main dish.html" class="header-buttons">HLAVNÍ CHODY</a>
-      <a href="../../../html/desserts.html" class="header-buttons">DEZERTY</a>
-      <a href="#" class="header-buttons">VZOROVÉ MENU</a>
+      <div class="brand-title">
+        Cookbook de Bel-Ami
+      </div>
+
+      <a href="#" class="toggle-button">
+        <img id="toggle-image" src="../../../assets/icons/wooden-spoons-icon.png" alt="toggle button">
+      </a>
+
+      <div class="navbar-links">
+        
+        <ul>
+          <li><a id="home-button" href="../../../index.html">HOME</a></li>
+          <li><a href="../../../html/appetizers.html">PŘEDKRMY</a></li>
+          <li><a href="../../../html/main dish.html">HLAVNÍ CHODY</a></li>
+          <li><a href="../../../html/desserts.html">DEZERTY</a></li>
+          <li><a href="#">VZOROVÉ MENU</a></li>
+        </ul>
+
+      </div>
+
+    </nav>
+
+    <div class="navbar-links" id="toggle">
+        
+      <ul>
+        <li><a id="home-button" href="../../../index.html">HOME</a></li>
+        <li><a href="../../../html/appetizers.html">PŘEDKRMY</a></li>
+        <li><a href="../../../html/main dish.html">HLAVNÍ CHODY</a></li>
+        <li><a href="../../../html/desserts.html">DEZERTY</a></li>
+        <li><a href="#">VZOROVÉ MENU</a></li>
+      </ul>
+
     </div>
 
     <div class="main-container">
@@ -96,11 +114,11 @@
           Ze všeho nejdřív dejte rozehřát troubu na 200 stupňů. Poté nakrájejte
           mrkev na stejně velká kolečka a dejte do zapékací mísy. Polijte lehce
           olejem, osolte a opepřete. Dále přidejte kari a římský kmín, nebojte
-          se přidat pořádné množství, tyto dvě koření nám tvoří chuť. Zapékací
-          mísu vložte do rozehřáté trouby a nechte péct do změknutí, 20 –⁠ ⁠⁠40
-          minut. Po vytáhnutí z trouby vložte obsah mísy do mixéru a mrkev spolu
-          s kořením rozmixujte. Následně přidejte čerstvý sýr a znovu mixérem
-          promíchejte. Pak už stačí jen ochutnat a dochutit dle vašich představ.
+          se přidat pořádné množství, tato dvě koření nám tvoří chuť. Zapékací
+          mísu vložte do rozehřáté trouby a nechte péct do změknutí, 20–⁠⁠40
+          minut. Po vytáhnutí z trouby vložte obsah mísy do mixéru a rozmixujte. 
+          Následně přidejte čerstvý sýr a znovu promíchejte. Pak už 
+          stačí jen ochutnat a dochutit dle vašich představ.
           Ideálně podáváme s čerstvým pečivem.
         </p>
       </div>
