--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li><a href="./html/appetizers.html">PŘEDKRMY</a></li>
           <li><a href="./html/main dish.html">HLAVNÍ CHODY</a></li>
           <li><a href="./html/desserts.html">DEZERTY</a></li>
-          <li><a href="#">VZOROVÉ MENU</a></li>
+          <li><a href="#">VZOROVÁ MENU</a></li>
         </ul>
 
       </div>
@@ -54,7 +54,7 @@
         <li><a href="./html/appetizers.html">PŘEDKRMY</a></li>
         <li><a href="./html/main dish.html">HLAVNÍ CHODY</a></li>
         <li><a href="./html/desserts.html">DEZERTY</a></li>
-        <li><a href="#">VZOROVÉ MENU</a></li>
+        <li><a href="#">VZOROVÁ MENU</a></li>
       </ul>
 
     </div>
