--- a/html/main dish.html
+++ b/html/main dish.html
@@ -42,7 +42,7 @@
           <li><a href="../html/appetizers.html">PŘEDKRMY</a></li>
           <li><a href="../html/main dish.html">HLAVNÍ CHODY</a></li>
           <li><a href="../html/desserts.html">DEZERTY</a></li>
-          <li><a href="#">VZOROVÉ MENU</a></li>
+          <li><a href="#">VZOROVÁ MENU</a></li>
         </ul>
 
       </div>
@@ -56,7 +56,7 @@
         <li><a href="../html/appetizers.html">PŘEDKRMY</a></li>
         <li><a href="../html/main dish.html">HLAVNÍ CHODY</a></li>
         <li><a href="../html/desserts.html">DEZERTY</a></li>
-        <li><a href="#">VZOROVÉ MENU</a></li>
+        <li><a href="#">VZOROVÁ MENU</a></li>
       </ul>
 
     </div>
