--- a/html/recipes/appetizers/mrkvova_pomazanka.html
+++ b/html/recipes/appetizers/mrkvova_pomazanka.html
@@ -41,7 +41,7 @@
           <li><a href="../../../html/appetizers.html">PŘEDKRMY</a></li>
           <li><a href="../../../html/main dish.html">HLAVNÍ CHODY</a></li>
           <li><a href="../../../html/desserts.html">DEZERTY</a></li>
-          <li><a href="#">VZOROVÉ MENU</a></li>
+          <li><a href="#">VZOROVÁ MENU</a></li>
         </ul>
 
       </div>
@@ -55,7 +55,7 @@
         <li><a href="../../../html/appetizers.html">PŘEDKRMY</a></li>
         <li><a href="../../../html/main dish.html">HLAVNÍ CHODY</a></li>
         <li><a href="../../../html/desserts.html">DEZERTY</a></li>
-        <li><a href="#">VZOROVÉ MENU</a></li>
+        <li><a href="#">VZOROVÁ MENU</a></li>
       </ul>
 
     </div>
@@ -110,7 +110,7 @@
 
       <div class="recipe-cell">
         <h2 id="recipe-header" class="container-content">Postup:</h2>
-        <p id="h2-id" class="container-content">
+        <p class="container-content">
           Ze všeho nejdřív dejte rozehřát troubu na 200 stupňů. Poté nakrájejte
           mrkev na stejně velká kolečka a dejte do zapékací mísy. Polijte lehce
           olejem, osolte a opepřete. Dále přidejte kari a římský kmín, nebojte
