--- a/html/main dish.html
+++ b/html/main dish.html
@@ -71,7 +71,7 @@
       </div>
       <div class="recipes-list cell">
         <ul>
-          <li><a href="#">Kynuté knedlíčky s borůvkami</a></li>
+          <li><a href="./recipes/main_dishes/kynute_knedlicky_boruvka.html">Kynuté knedlíčky s borůvkami</a></li>
           <li><a href="#">Losos v medovo-hořčičné omáčce</a></li>
           <li><a href="#">Domácí Pizza</a></li>
           <li><a href="#">Těstoviny s tuňákem na citronu</a></li>
