--- a/html/appetizers.html
+++ b/html/appetizers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookbook de Bel-Ami - Appetizers</title>
+    <title>Appetizers</title>
 
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
+
     <script src="../script.js" defer></script>
   </head>
 
@@ -71,8 +74,8 @@
       <div class="recipes-list cell">
         <ul>
           <li><a href="../html/recipes/appetizers/mrkvova_pomazanka.html">Mrkvová pomazánka</a></li>
+          <li><a href="../html/recipes/appetizers/brokolicovy_krem.html">Brokolicový krém</a></li>
           <li><a href="#">Dýňový krém</a></li>
-          <li><a href="#">Brokolicový krém</a></li>
           <li><a href="#">Česnečka</a></li>
         </ul>
       </div>
