--- a/html/desserts.html
+++ b/html/desserts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookbook de Bel-Ami - Desserts</title>
+    <title>Desserts</title>
 
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
+
     <script src="../script.js" defer></script>
   </head>
 
@@ -70,10 +73,10 @@
       </div>
       <div class="recipes-list cell">
         <ul>
+          <li><a href="../html/recipes/desserts/harrison_dort.html">Harrison Dort</a></li>
           <li><a href="#">Kokosový Dark Cake</a></li>
           <li><a href="#">Cheesecake</a></li>
           <li><a href="#">Štrůdl ala Waltz</a></li>
-          <li><a href="#">Harrison Dort</a></li>
         </ul>
       </div>
     </div>
