--- a/html/main dish.html
+++ b/html/main dish.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookbook de Bel-Ami - Main Dishes</title>
+    <title>Main Dishes</title>
 
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
@@ -16,6 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
+
     <script src="../script.js" defer></script>
   </head>
 
