--- a/html/recipes/appetizers/brokolicovy_krem.html
+++ b/html/recipes/appetizers/brokolicovy_krem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mrkvová pomazánka</title>
+    <title>Brokolicový krém</title>
 
     <link rel="stylesheet" href="../../../css/style.css" />
     <link rel="stylesheet" href="../../../css/header_style.css" />
@@ -65,11 +65,11 @@
 
     <div class="main-container">
       <div class="food-image-cell">
-        <h2>Mrkvová pomazánka</h2>
+        <h2>Brokolicový krém</h2>
         <img
           class="food-image"
-          src="../../../assets/images/mrkvova pomazanka.jpg"
-          alt="mrkvová pomazánka s italskou houstičkou"
+          src="../../../assets/images/brokolicovy_krem.png"
+          alt="Brokolicový krém"
         />
       </div>
 
@@ -81,7 +81,7 @@
 
         <div class="tab-container">
           <div class="portions">
-            <p>Počet porcí: <span data-portions>2</span></p>
+            <p>Počet porcí: <span data-portions>4</span></p>
             <button data-button>+</button>
             <button data-button>-</button>
           </div>
@@ -91,24 +91,32 @@
         <div class="tab-container">
           <table>
             <tr>
-              <th>Mrkev</th>
-              <th><span data-ingredient-amount>360</span> g</th>
+              <th>Brokolice</th>
+              <th><span data-ingredient-amount>1</span> ks</th>
             </tr>
             <tr>
-              <th>Čerstvý sýr (Lučina)</th>
-              <th><span data-ingredient-amount>150</span> g</th>
+              <th>Cibule</th>
+              <th><span data-ingredient-amount>1</span> ks</th>
             </tr>
             <tr>
               <th>Olej</th>
-              <th><span data-ingredient-amount>15</span> ml</th>
+              <th><span data-ingredient-amount>50</span> ml</th>
             </tr>
             <tr>
-              <th>Římský kmín</th>
-              <th><span data-ingredient-amount></span>dle chuti</th>
+              <th>Česnek</th>
+              <th><span data-ingredient-amount>4</span> stroužky</th>
             </tr>
             <tr>
-              <th>Kari</th>
-              <th><span data-ingredient-amount></span>dle chuti</th>
+              <th>Kešu ořechy</th>
+              <th><span data-ingredient-amount>100</span> g</th>
+            </tr>
+            <tr>
+              <th>Zeleninový vývar</th>
+              <th><span data-ingredient-amount>1</span> l</th>
+            </tr>
+            <tr>
+              <th>Baby špenát</th>
+              <th><span data-ingredient-amount>40</span> g</th>
             </tr>
           </table>
 
@@ -118,15 +126,11 @@
       <div class="recipe-cell">
         <h2 id="recipe-header" class="container-content">Postup:</h2>
         <p class="container-content">
-          Ze všeho nejdřív dejte rozehřát troubu na 200 stupňů. Poté nakrájejte
-          mrkev na stejně velká kolečka a dejte do zapékací mísy. Polijte lehce
-          olejem, osolte a opepřete. Dále přidejte kari a římský kmín, nebojte
-          se přidat pořádné množství, tato dvě koření nám tvoří chuť. Zapékací
-          mísu vložte do rozehřáté trouby a nechte péct do změknutí, 20–⁠⁠40
-          minut. Po vytáhnutí z trouby vložte obsah mísy do mixéru a rozmixujte. 
-          Následně přidejte čerstvý sýr a znovu promíchejte. Pak už 
-          stačí jen ochutnat a dochutit dle vašich představ.
-          Ideálně podáváme s čerstvým pečivem.
+          Nakrájejte cibuli a česnek a osmažte je v hrnci na oleji. Když vám cibulka zezlátne a česnek provoní kuchyni, 
+          přidejte do hrnce nakrájenou brokolici.<br>Osolte, opepřete a nechte restovat.<br>
+          Dále přidejte kešu ořechy (nejlépe solené), podlijte vývarem a nechte vařit, dokud vám zelenina nezměkne.<br>
+          Poté přidejte lístky baby špenátu a ještě chvilku povařte. Následně polévku dohladka rozmixujte a dochuťte například koriandru či paprikou.<br>
+          Na dozdobení můžete použít pár zbylých kešu ořechů, lístky špenátu či osmažené oblíbené pečivo.<br>
         </p>
       </div>
     </div>
