--- a/html/recipes/desserts/harrison_dort.html
+++ b/html/recipes/desserts/harrison_dort.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mrkvová pomazánka</title>
+    <title>Harrison Dort</title>
 
     <link rel="stylesheet" href="../../../css/style.css" />
     <link rel="stylesheet" href="../../../css/header_style.css" />
@@ -65,11 +65,11 @@
 
     <div class="main-container">
       <div class="food-image-cell">
-        <h2>Mrkvová pomazánka</h2>
+        <h2>Harrison Dort</h2>
         <img
           class="food-image"
-          src="../../../assets/images/mrkvova pomazanka.jpg"
-          alt="mrkvová pomazánka s italskou houstičkou"
+          src="../../../assets/images/harisson dort.jpg"
+          alt="Brokolicový krém"
         />
       </div>
 
@@ -81,7 +81,7 @@
 
         <div class="tab-container">
           <div class="portions">
-            <p>Počet porcí: <span data-portions>2</span></p>
+            <p>Počet porcí: <span data-portions>8</span></p>
             <button data-button>+</button>
             <button data-button>-</button>
           </div>
@@ -91,24 +91,54 @@
         <div class="tab-container">
           <table>
             <tr>
-              <th>Mrkev</th>
-              <th><span data-ingredient-amount>360</span> g</th>
+              <th><strong>Těsto:</strong></th>
             </tr>
             <tr>
-              <th>Čerstvý sýr (Lučina)</th>
+              <th>Vejce</th>
+              <th><span data-ingredient-amount>8</span> ks</th>
+            </tr>
+            <tr>
+              <th>Cukr krystal/krupice</th>
+              <th><span data-ingredient-amount>160</span> g</th>
+            </tr>
+            <tr>
+              <th>Vanilkový cukr</th>
+              <th><span data-ingredient-amount>20</span> g</th>
+            </tr>
+            <tr>
+              <th>Vlažná voda</th>
+              <th><span data-ingredient-amount>3</span> lžíce</th>
+            </tr>
+            <tr>
+              <th>Mouka polohrubá/hladká</th>
+              <th><span data-ingredient-amount>160</span> g</th>
+            </tr>
+            <tr>
+              <th><strong>Krém:</strong></th>
+            </tr>
+            <tr>
+              <th>Mascarpone</th>
+              <th><span data-ingredient-amount>625</span> g</th>
+            </tr>
+            <tr>
+              <th>Cukr moučkový</th>
+              <th><span data-ingredient-amount>40</span> g</th>
+            </tr>
+            <tr>
+              <th>Smetana 30%</th>
               <th><span data-ingredient-amount>150</span> g</th>
             </tr>
             <tr>
-              <th>Olej</th>
-              <th><span data-ingredient-amount>15</span> ml</th>
+              <th>Máslo</th>
+              <th><span data-ingredient-amount>30</span> g</th>
             </tr>
             <tr>
-              <th>Římský kmín</th>
-              <th><span data-ingredient-amount></span>dle chuti</th>
+              <th>Borůvky</th>
+              <th><span data-ingredient-amount>325</span> g</th>
             </tr>
             <tr>
-              <th>Kari</th>
-              <th><span data-ingredient-amount></span>dle chuti</th>
+              <th>Cukr krystal/krupice</th>
+              <th><span data-ingredient-amount>75</span> g</th>
             </tr>
           </table>
 
@@ -118,15 +148,21 @@
       <div class="recipe-cell">
         <h2 id="recipe-header" class="container-content">Postup:</h2>
         <p class="container-content">
-          Ze všeho nejdřív dejte rozehřát troubu na 200 stupňů. Poté nakrájejte
-          mrkev na stejně velká kolečka a dejte do zapékací mísy. Polijte lehce
-          olejem, osolte a opepřete. Dále přidejte kari a římský kmín, nebojte
-          se přidat pořádné množství, tato dvě koření nám tvoří chuť. Zapékací
-          mísu vložte do rozehřáté trouby a nechte péct do změknutí, 20–⁠⁠40
-          minut. Po vytáhnutí z trouby vložte obsah mísy do mixéru a rozmixujte. 
-          Následně přidejte čerstvý sýr a znovu promíchejte. Pak už 
-          stačí jen ochutnat a dochutit dle vašich představ.
-          Ideálně podáváme s čerstvým pečivem.
+          <strong>Těsto:</strong><br>
+          Nejdříve si do dvou misek rozdělte vejce na bílky a žloutky. Bílky vyšlehejte do tuhého sněhu. 
+          Poté smíchejte žloutky s cukrem a vlažnou vodou, postupně vmíchejte mouku. Nakonec opatrně přidejte sníh.
+          Těsto přelijte do dortové formy, zklepněte a pečte na cca 150 stupňů po dobu 15 minut podle tloušťky těsta. Je-li těsto vyšší, 
+          většinou teplotu trochu snížím a peču déle.<br><br>
+          <strong>Krém:</strong><br>
+          Mascarpone s moučkovým cukrem a smetanou důkladně promíchejte. Můžete přidat i kapku vanilkového extraktu. 
+          Následně rozpalte máslo na pánvi a šoupněte tam cukr s borkůvkami. Sem tam promíchejte, aby se vám borůvky nepřipálily. 
+          Borůvky pustí hodně vody, kterou je třeba odpařit, takže se nebojte vytrvat. Až když je směs v pánvi tužší, můžete
+          pánev odstavit z plotny a nechat lehce zchladnout. Následně směs vmícháte do mascarpone a vynikající krém je na světě.<br><br>
+          <strong>Dokončení:</strong><br>
+          Piškot rozkojte napůl nebo třeba i na 3 části, pokud jste měli menší formu. Nešetřete s krémem a pořádně jej nadělte doprostřed
+          dortu. Poté piškot spojte a celý ho krémem namažte zvrchu a ze všech stran. Nakonec můžete ozdobit třeba kokosem,
+          zbytkem krému, či jakkoliv jinak. To už je na vás, kreativitě se meze nekladou!<br>
+          Dort není příliš sladký, spíše příjemně sladkokyselý. Dobrou chuť!
         </p>
       </div>
     </div>
