--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/icons/main_icon.png">
+
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
+
     <script src="./script.js" defer></script>
   </head>
 
@@ -65,7 +69,7 @@
       <div class="image-cell">
         <img
           class="main-page-img left-image"
-          src="./assets/images/harisson dort.jpg"
+          src="./assets/images/dort home.jpg"
           alt="ostružinový dort na pěkném talířku"
         />
       </div>
