--- a/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
+++ b/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookbook de Bel-Ami</title>
+    <title>Kynuté knedlíčky</title>
 
     <link rel="stylesheet" href="../../../css/style.css" />
     <link rel="stylesheet" href="../../../css/header_style.css" />
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/x-icon">
 
     <script src="../../../script.js" defer></script>
     <script src="../../../recipe.js" defer></script>
