--- a/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
+++ b/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
@@ -166,7 +166,7 @@
     <footer class="footer border-line">
       <p>©2023 Všechna práva vyhrazena</p>
       <a class="footer-a" href="...">Kontaktujte nás</a>
-      <a class="footer-a" href="...">Web Design</a>
+      <a class="footer-a" href="https://www.jiriklatovsky.eu/">Web Design</a>
     </footer>
   </body>
 </html>
