přesun navbar a footer do partials

--- a/html/recipes/appetizers/brokolicovy_krem.html
+++ b/html/recipes/appetizers/brokolicovy_krem.html
@@ -18,8 +18,8 @@
 
     <link rel="icon" href="../../../assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="../../../script.js" defer></script>
-    <script src="../../../recipe.js" defer></script>
+    <script src="../../../js/script.js" defer></script>
+    <script src="../../../js/recipe.js" defer></script>
   </head>
 
   <body>
