--- a/main dish.html
+++ b/main dish.html
@@ -19,51 +19,12 @@
 
     <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="../script.js" defer></script>
+    <script src="../js/script.js" defer></script>
   </head>
 
   <body>
 
-    <nav class="navbar">
-
-      <div class="brand-icon">
-        <img class="brand-icon" src="../assets/icons/main_icon.png" alt="cook icon">
-      </div>
-
-      <div class="brand-title">
-        Cookbook de Bel-Ami
-      </div>
-
-      <a href="#" class="toggle-button">
-        <img id="toggle-image" src="../assets/icons/wooden-spoons-icon.png" alt="toggle button">
-      </a>
-
-      <div class="navbar-links">
-        
-        <ul>
-          <li><a id="home-button" href="../index.html">HOME</a></li>
-          <li><a href="../html/appetizers.html">PŘEDKRMY</a></li>
-          <li><a href="../html/main dish.html">HLAVNÍ CHODY</a></li>
-          <li><a href="../html/desserts.html">DEZERTY</a></li>
-          <li><a href="#">VZOROVÁ MENU</a></li>
-        </ul>
-
-      </div>
-
-    </nav>
-
-    <div class="navbar-links" id="toggle">
-        
-      <ul>
-        <li><a id="home-button" href="../index.html">HOME</a></li>
-        <li><a href="../html/appetizers.html">PŘEDKRMY</a></li>
-        <li><a href="../html/main dish.html">HLAVNÍ CHODY</a></li>
-        <li><a href="../html/desserts.html">DEZERTY</a></li>
-        <li><a href="#">VZOROVÁ MENU</a></li>
-      </ul>
-
-    </div>
-
+    <div class="navbar-placeholder"><!--Navbar placeholder--></div>
 
     <div class="food-type-container">
       <div class="h2-cell cell">
@@ -82,10 +43,6 @@
       </div>
     </div>
 
-    <footer class="footer border-line">
-      <p>©2023 Všechna práva vyhrazena</p>
-      <a class="footer-a" href="...">Kontaktujte nás</a>
-      <a class="footer-a" href="https://www.jiriklatovsky.eu/">Web Design</a>
-    </footer>
+    <div class="footer-placeholder"><!--Footer placeholder--></div>
   </body>
 </html>
