--- a/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
+++ b/html/recipes/main_dishes/kynute_knedlicky_boruvka.html
@@ -18,8 +18,8 @@
 
     <link rel="icon" href="../../../assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="../../../script.js" defer></script>
-    <script src="../../../recipe.js" defer></script>
+    <script src="../../../js/script.js" defer></script>
+    <script src="../../../js/recipe.js" defer></script>
   </head>
 
   <body>
