--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="./script.js" defer></script>
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
