dynimicke nacitani receptu

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookbook de Bel-Ami</title>
 
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/header_style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/header_style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +31,7 @@
       <div class="image-cell">
         <img
           class="main-page-img left-image"
-          src="./assets/images/dort home.jpg"
+          src="assets/images/dort_home.jpg"
           alt="ostružinový dort na pěkném talířku"
         />
       </div>
@@ -56,7 +56,7 @@
       <div class="image-cell" id="second-image">
         <img
           class="main-page-img right-image"
-          src="./assets/images/knedlíčky.png"
+          src="assets/images/knedlicky.png"
           alt="domácí kynuté knedlíčky s borůvkami"
         />
       </div>
@@ -64,7 +64,7 @@
       <div class="image-cell">
         <img
           class="main-page-img left-image"
-          src="./assets/images/mrkvova pomazanka uvodni.jpg"
+          src="assets/images/mrkvova_pomazanka_uvodni.jpg"
           alt="kompozice mrkvové pomazánky a italských bochánků s nožem na krájení"
         />
       </div>
