--- a/appetizers.html
+++ b/appetizers.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Appetizers</title>
 
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/header_style.css" />
-    <link rel="stylesheet" href="../css/food_types.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/header_style.css" />
+    <link rel="stylesheet" href="css/food_types.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,9 +17,9 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="../js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
@@ -31,15 +31,10 @@
         <h2>PŘEDKRMY</h2>
       </div>
       <div class="food-type-cell cell">
-        <img class="food-type-image" src="../assets/images/predkrmy pozadi.png" alt="obrázek předkrmu">
+        <img class="food-type-image" src="assets/images/predkrmy_pozadi.png" alt="obrázek předkrmu">
       </div>
-      <div class="recipes-list cell">
-        <ul>
-          <li><a href="../html/recipes/appetizers/mrkvova_pomazanka.html">Mrkvová pomazánka</a></li>
-          <li><a href="../html/recipes/appetizers/brokolicovy_krem.html">Brokolicový krém</a></li>
-          <li><a href="#">Dýňový krém</a></li>
-          <li><a href="#">Česnečka</a></li>
-        </ul>
+      <div class="recipes-list cell" id="recipes-list">
+        <!-- Recipes will be dynamically loaded here -->
       </div>
     </div>
 
