--- a/main_dish.html
+++ b/main_dish.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Dishes</title>
 
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/header_style.css" />
-    <link rel="stylesheet" href="../css/food_types.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/header_style.css" />
+    <link rel="stylesheet" href="css/food_types.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,9 +17,9 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="../assets/icons/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
 
-    <script src="../js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
@@ -31,15 +31,10 @@
         <h2>HLAVNÍ CHODY</h2>
       </div>
       <div class="food-type-cell cell">
-        <img class="food-type-image" src="../assets/images/hlavni chody pozadi.png" alt="obrázeke předkrmu">
+        <img class="food-type-image" src="assets/images/hlavni_chody_pozadi.png" alt="obrázek hlavního chodu">
       </div>
-      <div class="recipes-list cell">
-        <ul>
-          <li><a href="./recipes/main_dishes/kynute_knedlicky_boruvka.html">Kynuté knedlíčky s borůvkami</a></li>
-          <li><a href="#">Losos v medovo-hořčičné omáčce</a></li>
-          <li><a href="#">Domácí Pizza</a></li>
-          <li><a href="#">Těstoviny s tuňákem na citronu</a></li>
-        </ul>
+      <div class="recipes-list cell" id="recipes-list">
+        <!-- Recipes will be dynamically loaded here -->
       </div>
     </div>
 
