--- a/recipe.html
+++ b/recipe.html
@@ -19,85 +19,45 @@
     <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
 
     <script src="js/script.js" defer></script>
+    <script src="js/recipe.js" defer></script>
   </head>
 
   <body>
-    
     <div class="navbar-placeholder"><!--Navbar placeholder--></div>
 
     <div class="main-container">
       <div class="food-image-cell">
-        <h2>Brokolicový krém</h2>
-        <img
-          class="food-image"
-          src="../../../assets/images/brokolicovy_krem.png"
-          alt="Brokolicový krém"
-        />
+        <h2 id="recipe-title"></h2>
+        <img id="recipe-image" class="food-image" src="" alt="">
       </div>
 
       <div class="ingredients-cell">
-
         <div class="tab-container">
           <h2 id="ingredients">Ingredience:</h2>
         </div>
 
         <div class="tab-container">
           <div class="portions">
-            <p>Počet porcí: <span data-portions>4</span></p>
+            <p>Počet porcí: <span id="recipe-portions"></span></p>
             <button data-button>+</button>
             <button data-button>-</button>
           </div>
         </div>
 
-
         <div class="tab-container">
-          <table>
-            <tr>
-              <th>Brokolice</th>
-              <th><span data-ingredient-amount>1</span> ks</th>
-            </tr>
-            <tr>
-              <th>Cibule</th>
-              <th><span data-ingredient-amount>1</span> ks</th>
-            </tr>
-            <tr>
-              <th>Olej</th>
-              <th><span data-ingredient-amount>50</span> ml</th>
-            </tr>
-            <tr>
-              <th>Česnek</th>
-              <th><span data-ingredient-amount>4</span> stroužky</th>
-            </tr>
-            <tr>
-              <th>Kešu ořechy</th>
-              <th><span data-ingredient-amount>100</span> g</th>
-            </tr>
-            <tr>
-              <th>Zeleninový vývar</th>
-              <th><span data-ingredient-amount>1</span> l</th>
-            </tr>
-            <tr>
-              <th>Baby špenát</th>
-              <th><span data-ingredient-amount>40</span> g</th>
-            </tr>
+          <table id="ingredients-table">
+            <!-- Ingredients will be dynamically loaded here -->
           </table>
-
         </div>
       </div>
 
       <div class="recipe-cell">
         <h2 id="recipe-header" class="container-content">Postup:</h2>
-        <p class="container-content">
-          Nakrájejte cibuli a česnek a osmažte je v hrnci na oleji. Když vám cibulka zezlátne a česnek provoní kuchyni, 
-          přidejte do hrnce nakrájenou brokolici.<br>Osolte, opepřete a nechte restovat.<br>
-          Dále přidejte kešu ořechy (nejlépe solené), podlijte vývarem a nechte vařit, dokud vám zelenina nezměkne.<br>
-          Poté přidejte lístky baby špenátu a ještě chvilku povařte. Následně polévku dohladka rozmixujte a dochuťte například koriandru či paprikou.<br>
-          Na dozdobení můžete použít pár zbylých kešu ořechů, lístky špenátu či osmažené oblíbené pečivo.<br>
-        </p>
+        <p id="recipe-desc" class="container-content"></p>
       </div>
     </div>
 
     <div class="footer-placeholder"><!--Footer placeholder--></div>
-    
+
   </body>
 </html>
