--- a/recipe.html
+++ b/recipe.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brokolicový krém</title>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/header_style.css" />
-    <link rel="stylesheet" href="css/recipe.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,8 +29,12 @@
         <img id="recipe-image" class="food-image" src="" alt="">
       </div>
 
+      <div class="arrow-container">
+        <div class="glowing-arrow" id="scroll-arrow">↓</div>
+      </div>
+
       <div class="ingredients-cell">
-        <div class="tab-container">
+        <div class="tab-container" id="tab-container">
           <h2 id="ingredients">Ingredience:</h2>
         </div>
 
