--- a/desserts.html
+++ b/desserts.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desserts</title>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/header_style.css" />
-    <link rel="stylesheet" href="css/food_types.css">
+    <link rel="stylesheet" href="css/styles.css" />
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
