--- a/appetizers.html
+++ b/appetizers.html
@@ -26,7 +26,7 @@
 
     <div class="food-type-container">
       <div class="h2-cell cell">
-        <h2>PŘEDKRMY</h2>
+        <h2>SNÍDANĚ & PŘEDKRMY</h2>
       </div>
       <div class="food-type-cell cell">
         <img class="food-type-image" src="assets/images/predkrmy_pozadi.png" alt="obrázek předkrmu">
