--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="text-cell">
         <h2 class="container-content">Kdo jsme?</h2>
-        <p class="container-content">Jsme pár milující dobré jídlo a sebe navzájem. 
+        <p class="container-content">Milujeme dobré jídlo. 
           Kuchařku jsme založili, protože rádi vytváříme nové recepty, 
           které chceme mít zaznamenány, abychom se k nim mohli 
           vracet či ohodnotit naše pokroky v oblasti gastronomie.
