--- a/main_dish.html
+++ b/main_dish.html
@@ -16,8 +16,11 @@
     />
 
     <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
-
+    
+    <script src="js/urlHandler.js" defer></script>
     <script src="js/script.js" defer></script>
+    
+
   </head>
 
   <body>
