--- a/desserts.html
+++ b/desserts.html
@@ -17,7 +17,9 @@
 
     <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
 
+    <script src="js/urlHandler.js" defer></script>
     <script src="js/script.js" defer></script>
+    
   </head>
 
   <body>
