--- a/main_dish.html
+++ b/main_dish.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main Dishes</title>
+    <meta name="description" content="Hlavní chody." />
+    <meta property="og:title" content="Hlavní chody - Cookbook de Bel-Ami" />
+    <meta property="og:description" content="Inspirujte se našimi recepty na hlavní chody, které si zamilujete." />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/hlavni_chody_pozadi.png" />
+    <meta property="og:url" content="https://www.belamicookbook.cz/main-dish" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Hlavní chody - Cookbook de Bel-Ami" />
+    <meta name="twitter:description" content="Inspirujte se našimi recepty na hlavní chody, které si zamilujete." />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/hlavni_chody_pozadi.png" />
+
+    <title>Hlavní chody - Cookbook de Bel-Ami</title>
 
     <link rel="stylesheet" href="css/styles.css" />
 
