--- a/recipe.html
+++ b/recipe.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <meta name="description" content="Cookbook de Bel-Ami - Zkuste náš výborný recept." />
+    <meta property="og:title" content="Recept - Cookbook de Bel-Ami" />
+    <meta property="og:description" content="Zkuste náš výborný recept a obohaťte svůj jídelníček." />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/images/default_recipe_image.png" />
+    <meta property="og:url" content="https://www.belamicookbook.cz/recipe" />
+    <meta property="og:type" content="article" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Recept - Cookbook de Bel-Ami" />
+    <meta name="twitter:description" content="Zkuste náš výborný recept a obohaťte svůj jídelníček." />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/images/default_recipe_image.png" />
+    
+    <title>Recept - Cookbook de Bel-Ami</title>
 
     <link rel="stylesheet" href="css/styles.css" />
 
