--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Cookbook de Bel-Ami - Osobní kuchařka plná receptů na předkrmy, hlavní chody a dezerty." />
+    <meta name="keywords" content="recepty, kuchařka, předkrmy, hlavní chody, dezerty, vaření" />
+    <meta name="author" content="Cookbook de Bel-Ami" />
+    <meta property="og:title" content="Cookbook de Bel-Ami" />
+    <meta property="og:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
+    <meta property="og:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+    <meta property="og:url" content="https://www.belamicookbook.cz/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cookbook de Bel-Ami" />
+    <meta name="twitter:description" content="Objevte naši osobní kuchařku plnou lahodných receptů." />
+    <meta name="twitter:image" content="https://www.belamicookbook.cz/assets/icons/main_icon.png" />
+
     <title>Cookbook de Bel-Ami</title>
 
     <link rel="stylesheet" href="css/styles.css" />
